y.output
   0  $accept : programme $end

   1  programme : PROG ACCOLADE_OUVRANTE corps ACCOLADE_FERMANTE

   2  corps : liste_declarations liste_instructions

   3  liste_declarations : liste_declaration_var liste_declaration_type liste_declaration_proc liste_declaration_fct

   4  liste_declaration_var :
   5                        | declaration_variable
   6                        | declaration_variable POINT_VIRGULE liste_declaration_var

   7  liste_declaration_type :
   8                         | declaration_type
   9                         | declaration_type POINT_VIRGULE liste_declaration_type

  10  liste_declaration_proc :
  11                         | declaration_procedure
  12                         | declaration_procedure POINT_VIRGULE liste_declaration_proc

  13  liste_declaration_fct :
  14                        | declaration_fonction
  15                        | declaration_fonction POINT_VIRGULE liste_declaration_fct

  16  liste_instructions : DEBUT suite_liste_inst FIN

  17  suite_liste_inst :
  18                   | instruction
  19                   | suite_liste_inst POINT_VIRGULE instruction

  20  declaration_type : TYPE IDF DEUX_POINTS suite_declaration_type

  21  suite_declaration_type : STRUCT liste_champs FSTRUCT
  22                         | TABLEAU dimension DE nom_type

  23  dimension : CROCHET_OUVRANT liste_dimensions CROCHET_FERMANT

  24  liste_dimensions : une_dimension
  25                   | liste_dimensions VIRGULE une_dimension

  26  une_dimension : expression POINT POINT expression

  27  liste_champs : un_champ
  28               | liste_champs un_champ

  29  un_champ : IDF DEUX_POINTS nom_type POINT_VIRGULE

  30  nom_type : type_simple
  31           | IDF

  32  type_simple : ENTIER
  33              | REEL
  34              | BOOLEEN
  35              | CARACTERE
  36              | CHAINE CROCHET_OUVRANT CSTE_ENTIERE CROCHET_FERMANT

  37  declaration_variable : VARIABLE IDF DEUX_POINTS nom_type
  38                       | VARIABLE IDF DEUX_POINTS nom_type OPAFF expression

  39  declaration_procedure : PROCEDURE IDF liste_parametres ACCOLADE_OUVRANTE corps ACCOLADE_FERMANTE

  40  declaration_fonction : FONCTION IDF liste_parametres RETOURNE type_simple ACCOLADE_OUVRANTE corps ACCOLADE_FERMANTE

  41  liste_parametres : PARENTHESE_OUVRANTE liste_param PARENTHESE_FERMANTE

  42  liste_param :
  43              | un_param
  44              | liste_param POINT_VIRGULE un_param

  45  un_param : IDF DEUX_POINTS type_simple

  46  instruction : affectation
  47              | condition
  48              | tant_que
  49              | repeter_tant_que
  50              | appel
  51              | RETOURNE resultat_retourne

  52  resultat_retourne :
  53                    | expression

  54  appel : IDF liste_arguments

  55  liste_arguments : PARENTHESE_OUVRANTE PARENTHESE_FERMANTE
  56                  | PARENTHESE_OUVRANTE liste_args PARENTHESE_FERMANTE

  57  liste_args : un_arg
  58             | liste_args VIRGULE un_arg

  59  un_arg : expression

  60  condition : SI PARENTHESE_OUVRANTE expression PARENTHESE_FERMANTE ALORS ACCOLADE_OUVRANTE liste_instructions ACCOLADE_FERMANTE SINON ACCOLADE_OUVRANTE liste_instructions ACCOLADE_FERMANTE

  61  tant_que : TANT_QUE PARENTHESE_OUVRANTE expression PARENTHESE_FERMANTE FAIRE ACCOLADE_OUVRANTE liste_instructions ACCOLADE_FERMANTE

  62  repeter_tant_que : FAIRE ACCOLADE_OUVRANTE liste_instructions ACCOLADE_FERMANTE TANT_QUE PARENTHESE_OUVRANTE expression PARENTHESE_FERMANTE

  63  affectation : variable OPAFF expression

  64  variable : IDF
  65           | IDF variable_suite

  66  variable_suite : CROCHET_OUVRANT liste_expression CROCHET_FERMANT variable_fin

  67  variable_fin :
  68               | variable_suite

  69  expression : expression_calcul
  70             | expression expression_logique expression_calcul

  71  expression_calcul : expression_calcul PLUS expression_suite
  72                    | expression_calcul MOINS expression_suite
  73                    | expression_suite

  74  expression_suite : expression_suite MULT expression_fin
  75                   | expression_suite DIV expression_fin
  76                   | expression_fin

  77  expression_fin : PARENTHESE_OUVRANTE expression PARENTHESE_FERMANTE
  78                 | constante
  79                 | variable
  80                 | appel

  81  liste_expression : liste_expression VIRGULE expression
  82                   | expression

  83  constante : CSTE_ENTIERE
  84            | CSTE_REEL
  85            | CSTE_STRING
  86            | CSTE_CHAR
  87            | CSTE_BOOL

  88  expression_logique : PLUS_PETIT
  89                     | PLUS_GRAND
  90                     | ET
  91                     | OU
  92                     | PLUS_PETIT_EGAL
  93                     | PLUS_GRAND_EGAL
  94                     | EGAL
  95                     | DIFFERENT

state 0
	$accept : . programme $end  (0)

	PROG  shift 1
	.  error

	programme  goto 2


state 1
	programme : PROG . ACCOLADE_OUVRANTE corps ACCOLADE_FERMANTE  (1)

	ACCOLADE_OUVRANTE  shift 3
	.  error


state 2
	$accept : programme . $end  (0)

	$end  accept


state 3
	programme : PROG ACCOLADE_OUVRANTE . corps ACCOLADE_FERMANTE  (1)
	liste_declaration_var : .  (4)

	VARIABLE  shift 4
	TYPE  reduce 4
	PROCEDURE  reduce 4
	FONCTION  reduce 4
	DEBUT  reduce 4

	corps  goto 5
	liste_declarations  goto 6
	liste_declaration_var  goto 7
	declaration_variable  goto 8


state 4
	declaration_variable : VARIABLE . IDF DEUX_POINTS nom_type  (37)
	declaration_variable : VARIABLE . IDF DEUX_POINTS nom_type OPAFF expression  (38)

	IDF  shift 9
	.  error


state 5
	programme : PROG ACCOLADE_OUVRANTE corps . ACCOLADE_FERMANTE  (1)

	ACCOLADE_FERMANTE  shift 10
	.  error


state 6
	corps : liste_declarations . liste_instructions  (2)

	DEBUT  shift 11
	.  error

	liste_instructions  goto 12


state 7
	liste_declarations : liste_declaration_var . liste_declaration_type liste_declaration_proc liste_declaration_fct  (3)
	liste_declaration_type : .  (7)

	TYPE  shift 13
	PROCEDURE  reduce 7
	FONCTION  reduce 7
	DEBUT  reduce 7

	liste_declaration_type  goto 14
	declaration_type  goto 15


state 8
	liste_declaration_var : declaration_variable .  (5)
	liste_declaration_var : declaration_variable . POINT_VIRGULE liste_declaration_var  (6)

	POINT_VIRGULE  shift 16
	TYPE  reduce 5
	PROCEDURE  reduce 5
	FONCTION  reduce 5
	DEBUT  reduce 5


state 9
	declaration_variable : VARIABLE IDF . DEUX_POINTS nom_type  (37)
	declaration_variable : VARIABLE IDF . DEUX_POINTS nom_type OPAFF expression  (38)

	DEUX_POINTS  shift 17
	.  error


state 10
	programme : PROG ACCOLADE_OUVRANTE corps ACCOLADE_FERMANTE .  (1)

	.  reduce 1


state 11
	liste_instructions : DEBUT . suite_liste_inst FIN  (16)
	suite_liste_inst : .  (17)

	TANT_QUE  shift 18
	FAIRE  shift 19
	SI  shift 20
	RETOURNE  shift 21
	IDF  shift 22
	POINT_VIRGULE  reduce 17
	FIN  reduce 17

	suite_liste_inst  goto 23
	instruction  goto 24
	appel  goto 25
	condition  goto 26
	tant_que  goto 27
	repeter_tant_que  goto 28
	affectation  goto 29
	variable  goto 30


state 12
	corps : liste_declarations liste_instructions .  (2)

	.  reduce 2


state 13
	declaration_type : TYPE . IDF DEUX_POINTS suite_declaration_type  (20)

	IDF  shift 31
	.  error


state 14
	liste_declarations : liste_declaration_var liste_declaration_type . liste_declaration_proc liste_declaration_fct  (3)
	liste_declaration_proc : .  (10)

	PROCEDURE  shift 32
	FONCTION  reduce 10
	DEBUT  reduce 10

	liste_declaration_proc  goto 33
	declaration_procedure  goto 34


state 15
	liste_declaration_type : declaration_type .  (8)
	liste_declaration_type : declaration_type . POINT_VIRGULE liste_declaration_type  (9)

	POINT_VIRGULE  shift 35
	PROCEDURE  reduce 8
	FONCTION  reduce 8
	DEBUT  reduce 8


state 16
	liste_declaration_var : declaration_variable POINT_VIRGULE . liste_declaration_var  (6)
	liste_declaration_var : .  (4)

	VARIABLE  shift 4
	TYPE  reduce 4
	PROCEDURE  reduce 4
	FONCTION  reduce 4
	DEBUT  reduce 4

	liste_declaration_var  goto 36
	declaration_variable  goto 8


state 17
	declaration_variable : VARIABLE IDF DEUX_POINTS . nom_type  (37)
	declaration_variable : VARIABLE IDF DEUX_POINTS . nom_type OPAFF expression  (38)

	ENTIER  shift 37
	REEL  shift 38
	BOOLEEN  shift 39
	CARACTERE  shift 40
	CHAINE  shift 41
	IDF  shift 42
	.  error

	nom_type  goto 43
	type_simple  goto 44


state 18
	tant_que : TANT_QUE . PARENTHESE_OUVRANTE expression PARENTHESE_FERMANTE FAIRE ACCOLADE_OUVRANTE liste_instructions ACCOLADE_FERMANTE  (61)

	PARENTHESE_OUVRANTE  shift 45
	.  error


state 19
	repeter_tant_que : FAIRE . ACCOLADE_OUVRANTE liste_instructions ACCOLADE_FERMANTE TANT_QUE PARENTHESE_OUVRANTE expression PARENTHESE_FERMANTE  (62)

	ACCOLADE_OUVRANTE  shift 46
	.  error


state 20
	condition : SI . PARENTHESE_OUVRANTE expression PARENTHESE_FERMANTE ALORS ACCOLADE_OUVRANTE liste_instructions ACCOLADE_FERMANTE SINON ACCOLADE_OUVRANTE liste_instructions ACCOLADE_FERMANTE  (60)

	PARENTHESE_OUVRANTE  shift 47
	.  error


state 21
	instruction : RETOURNE . resultat_retourne  (51)
	resultat_retourne : .  (52)

	PARENTHESE_OUVRANTE  shift 48
	CSTE_ENTIERE  shift 49
	CSTE_REEL  shift 50
	CSTE_STRING  shift 51
	CSTE_CHAR  shift 52
	CSTE_BOOL  shift 53
	IDF  shift 22
	POINT_VIRGULE  reduce 52
	FIN  reduce 52

	resultat_retourne  goto 54
	appel  goto 55
	variable  goto 56
	expression  goto 57
	expression_calcul  goto 58
	expression_suite  goto 59
	expression_fin  goto 60
	constante  goto 61


state 22
	appel : IDF . liste_arguments  (54)
	variable : IDF .  (64)
	variable : IDF . variable_suite  (65)

	CROCHET_OUVRANT  shift 62
	PARENTHESE_OUVRANTE  shift 63
	POINT_VIRGULE  reduce 64
	CROCHET_FERMANT  reduce 64
	VIRGULE  reduce 64
	POINT  reduce 64
	PARENTHESE_FERMANTE  reduce 64
	PLUS_PETIT  reduce 64
	PLUS_GRAND  reduce 64
	ET  reduce 64
	OU  reduce 64
	PLUS_PETIT_EGAL  reduce 64
	PLUS_GRAND_EGAL  reduce 64
	EGAL  reduce 64
	DIFFERENT  reduce 64
	PLUS  reduce 64
	MOINS  reduce 64
	MULT  reduce 64
	DIV  reduce 64
	TYPE  reduce 64
	PROCEDURE  reduce 64
	FONCTION  reduce 64
	OPAFF  reduce 64
	DEBUT  reduce 64
	FIN  reduce 64

	liste_arguments  goto 64
	variable_suite  goto 65


state 23
	liste_instructions : DEBUT suite_liste_inst . FIN  (16)
	suite_liste_inst : suite_liste_inst . POINT_VIRGULE instruction  (19)

	POINT_VIRGULE  shift 66
	FIN  shift 67
	.  error


state 24
	suite_liste_inst : instruction .  (18)

	.  reduce 18


state 25
	instruction : appel .  (50)

	.  reduce 50


state 26
	instruction : condition .  (47)

	.  reduce 47


state 27
	instruction : tant_que .  (48)

	.  reduce 48


state 28
	instruction : repeter_tant_que .  (49)

	.  reduce 49


state 29
	instruction : affectation .  (46)

	.  reduce 46


state 30
	affectation : variable . OPAFF expression  (63)

	OPAFF  shift 68
	.  error


state 31
	declaration_type : TYPE IDF . DEUX_POINTS suite_declaration_type  (20)

	DEUX_POINTS  shift 69
	.  error


state 32
	declaration_procedure : PROCEDURE . IDF liste_parametres ACCOLADE_OUVRANTE corps ACCOLADE_FERMANTE  (39)

	IDF  shift 70
	.  error


state 33
	liste_declarations : liste_declaration_var liste_declaration_type liste_declaration_proc . liste_declaration_fct  (3)
	liste_declaration_fct : .  (13)

	FONCTION  shift 71
	DEBUT  reduce 13

	liste_declaration_fct  goto 72
	declaration_fonction  goto 73


state 34
	liste_declaration_proc : declaration_procedure .  (11)
	liste_declaration_proc : declaration_procedure . POINT_VIRGULE liste_declaration_proc  (12)

	POINT_VIRGULE  shift 74
	FONCTION  reduce 11
	DEBUT  reduce 11


state 35
	liste_declaration_type : declaration_type POINT_VIRGULE . liste_declaration_type  (9)
	liste_declaration_type : .  (7)

	TYPE  shift 13
	PROCEDURE  reduce 7
	FONCTION  reduce 7
	DEBUT  reduce 7

	liste_declaration_type  goto 75
	declaration_type  goto 15


state 36
	liste_declaration_var : declaration_variable POINT_VIRGULE liste_declaration_var .  (6)

	.  reduce 6


state 37
	type_simple : ENTIER .  (32)

	.  reduce 32


state 38
	type_simple : REEL .  (33)

	.  reduce 33


state 39
	type_simple : BOOLEEN .  (34)

	.  reduce 34


state 40
	type_simple : CARACTERE .  (35)

	.  reduce 35


state 41
	type_simple : CHAINE . CROCHET_OUVRANT CSTE_ENTIERE CROCHET_FERMANT  (36)

	CROCHET_OUVRANT  shift 76
	.  error


state 42
	nom_type : IDF .  (31)

	.  reduce 31


state 43
	declaration_variable : VARIABLE IDF DEUX_POINTS nom_type .  (37)
	declaration_variable : VARIABLE IDF DEUX_POINTS nom_type . OPAFF expression  (38)

	OPAFF  shift 77
	POINT_VIRGULE  reduce 37
	TYPE  reduce 37
	PROCEDURE  reduce 37
	FONCTION  reduce 37
	DEBUT  reduce 37


state 44
	nom_type : type_simple .  (30)

	.  reduce 30


state 45
	tant_que : TANT_QUE PARENTHESE_OUVRANTE . expression PARENTHESE_FERMANTE FAIRE ACCOLADE_OUVRANTE liste_instructions ACCOLADE_FERMANTE  (61)

	PARENTHESE_OUVRANTE  shift 48
	CSTE_ENTIERE  shift 49
	CSTE_REEL  shift 50
	CSTE_STRING  shift 51
	CSTE_CHAR  shift 52
	CSTE_BOOL  shift 53
	IDF  shift 22
	.  error

	appel  goto 55
	variable  goto 56
	expression  goto 78
	expression_calcul  goto 58
	expression_suite  goto 59
	expression_fin  goto 60
	constante  goto 61


state 46
	repeter_tant_que : FAIRE ACCOLADE_OUVRANTE . liste_instructions ACCOLADE_FERMANTE TANT_QUE PARENTHESE_OUVRANTE expression PARENTHESE_FERMANTE  (62)

	DEBUT  shift 11
	.  error

	liste_instructions  goto 79


state 47
	condition : SI PARENTHESE_OUVRANTE . expression PARENTHESE_FERMANTE ALORS ACCOLADE_OUVRANTE liste_instructions ACCOLADE_FERMANTE SINON ACCOLADE_OUVRANTE liste_instructions ACCOLADE_FERMANTE  (60)

	PARENTHESE_OUVRANTE  shift 48
	CSTE_ENTIERE  shift 49
	CSTE_REEL  shift 50
	CSTE_STRING  shift 51
	CSTE_CHAR  shift 52
	CSTE_BOOL  shift 53
	IDF  shift 22
	.  error

	appel  goto 55
	variable  goto 56
	expression  goto 80
	expression_calcul  goto 58
	expression_suite  goto 59
	expression_fin  goto 60
	constante  goto 61


state 48
	expression_fin : PARENTHESE_OUVRANTE . expression PARENTHESE_FERMANTE  (77)

	PARENTHESE_OUVRANTE  shift 48
	CSTE_ENTIERE  shift 49
	CSTE_REEL  shift 50
	CSTE_STRING  shift 51
	CSTE_CHAR  shift 52
	CSTE_BOOL  shift 53
	IDF  shift 22
	.  error

	appel  goto 55
	variable  goto 56
	expression  goto 81
	expression_calcul  goto 58
	expression_suite  goto 59
	expression_fin  goto 60
	constante  goto 61


state 49
	constante : CSTE_ENTIERE .  (83)

	.  reduce 83


state 50
	constante : CSTE_REEL .  (84)

	.  reduce 84


state 51
	constante : CSTE_STRING .  (85)

	.  reduce 85


state 52
	constante : CSTE_CHAR .  (86)

	.  reduce 86


state 53
	constante : CSTE_BOOL .  (87)

	.  reduce 87


state 54
	instruction : RETOURNE resultat_retourne .  (51)

	.  reduce 51


state 55
	expression_fin : appel .  (80)

	.  reduce 80


state 56
	expression_fin : variable .  (79)

	.  reduce 79


state 57
	resultat_retourne : expression .  (53)
	expression : expression . expression_logique expression_calcul  (70)

	PLUS_PETIT  shift 82
	PLUS_GRAND  shift 83
	ET  shift 84
	OU  shift 85
	PLUS_PETIT_EGAL  shift 86
	PLUS_GRAND_EGAL  shift 87
	EGAL  shift 88
	DIFFERENT  shift 89
	POINT_VIRGULE  reduce 53
	FIN  reduce 53

	expression_logique  goto 90


state 58
	expression : expression_calcul .  (69)
	expression_calcul : expression_calcul . PLUS expression_suite  (71)
	expression_calcul : expression_calcul . MOINS expression_suite  (72)

	PLUS  shift 91
	MOINS  shift 92
	POINT_VIRGULE  reduce 69
	CROCHET_FERMANT  reduce 69
	VIRGULE  reduce 69
	POINT  reduce 69
	PARENTHESE_FERMANTE  reduce 69
	PLUS_PETIT  reduce 69
	PLUS_GRAND  reduce 69
	ET  reduce 69
	OU  reduce 69
	PLUS_PETIT_EGAL  reduce 69
	PLUS_GRAND_EGAL  reduce 69
	EGAL  reduce 69
	DIFFERENT  reduce 69
	TYPE  reduce 69
	PROCEDURE  reduce 69
	FONCTION  reduce 69
	DEBUT  reduce 69
	FIN  reduce 69


state 59
	expression_calcul : expression_suite .  (73)
	expression_suite : expression_suite . MULT expression_fin  (74)
	expression_suite : expression_suite . DIV expression_fin  (75)

	MULT  shift 93
	DIV  shift 94
	POINT_VIRGULE  reduce 73
	CROCHET_FERMANT  reduce 73
	VIRGULE  reduce 73
	POINT  reduce 73
	PARENTHESE_FERMANTE  reduce 73
	PLUS_PETIT  reduce 73
	PLUS_GRAND  reduce 73
	ET  reduce 73
	OU  reduce 73
	PLUS_PETIT_EGAL  reduce 73
	PLUS_GRAND_EGAL  reduce 73
	EGAL  reduce 73
	DIFFERENT  reduce 73
	PLUS  reduce 73
	MOINS  reduce 73
	TYPE  reduce 73
	PROCEDURE  reduce 73
	FONCTION  reduce 73
	DEBUT  reduce 73
	FIN  reduce 73


state 60
	expression_suite : expression_fin .  (76)

	.  reduce 76


state 61
	expression_fin : constante .  (78)

	.  reduce 78


state 62
	variable_suite : CROCHET_OUVRANT . liste_expression CROCHET_FERMANT variable_fin  (66)

	PARENTHESE_OUVRANTE  shift 48
	CSTE_ENTIERE  shift 49
	CSTE_REEL  shift 50
	CSTE_STRING  shift 51
	CSTE_CHAR  shift 52
	CSTE_BOOL  shift 53
	IDF  shift 22
	.  error

	appel  goto 55
	variable  goto 56
	expression  goto 95
	expression_calcul  goto 58
	expression_suite  goto 59
	expression_fin  goto 60
	liste_expression  goto 96
	constante  goto 61


state 63
	liste_arguments : PARENTHESE_OUVRANTE . PARENTHESE_FERMANTE  (55)
	liste_arguments : PARENTHESE_OUVRANTE . liste_args PARENTHESE_FERMANTE  (56)

	PARENTHESE_OUVRANTE  shift 48
	PARENTHESE_FERMANTE  shift 97
	CSTE_ENTIERE  shift 49
	CSTE_REEL  shift 50
	CSTE_STRING  shift 51
	CSTE_CHAR  shift 52
	CSTE_BOOL  shift 53
	IDF  shift 22
	.  error
